# pkgbuild

./: .cvsignore  AUTHORS  ChangeLog  ChangeLog.pre-sf  Makefile.am  NEWS  README  TODO  autogen.sh  config.pm  configure.in  get_rpm_topdir  ips-dependency-generator  ips_package.pm  ips_utils.pm  macros.in  packagebase.pm  pkgbuild-oi_sfe.spec  pkgbuild-postprocess  pkgbuild-sfe.spec  pkgbuild.in  pkgbuild.pl.in  pkgbuild.spec.in  pkgdb.pm.in  pkgdbgrep.c  pkgnames  pkgnmmap.pl  pkgnmmap.pm  pkgtool.in  pkgtool.pl  rpm_file.pm  rpm_package.pm  rpm_spec.pm.in  spectool.in  spectool.pl  version-file.in
doc/: Makefile.am  pkgbuild.1  pkgtool.1  spec-files.txt  spectool.1
m4/: Makefile.am  perl.m4
tests/: .cvsignore  Makefile.am  do-test.pl.in
tests/SOURCES/: Makefile.am
tests/SPECS/: Makefile.am
