dnl Process this file with autoconf to create configure.
AC_INIT(pkgbuild.pl.in)
PKGBUILD_VERSION=1.3.98.4
AC_SUBST(PKGBUILD_VERSION)

AM_INIT_AUTOMAKE(pkgbuild, $PKGBUILD_VERSION)
AC_PREFIX_DEFAULT(/opt/pkgbuild)

AM_PROG_CC_C_O

AC_PATH_PROG(PERL, perl)
if test -z "$PERL"; then
   AC_MSG_ERROR([perl not found, you need perl to use pkgbuild])
fi

AC_PROG_PERL(5.004)

AC_PATH_PROGS([PATCH],[gpatch patch])
AC_MSG_CHECKING([if $PATCH is GNU patch])
PATCH_IS_GNU=no
$PATCH --version 2>/dev/null | grep 'Free Software Foundation' > /dev/null \
       && PATCH_IS_GNU=yes
$PATCH --version 2>/dev/null | head -1 | grep '^patch ' > /dev/null \
       || PATCH_IS_GNU=no
AC_MSG_RESULT([$PATCH_IS_GNU])
if test $PATCH_IS_GNU = no; then
  AC_MSG_ERROR([pkgbuild requires GNU patch for correct operation])
fi
AC_SUBST(PATCH)

PATH=/usr/sfw/bin:$PATH
export PATH
AC_PATH_PROGS([TAR],[gtar tar])
AC_MSG_CHECKING([if $TAR is GNU tar])
TAR_IS_GNU=no
$TAR --version 2>/dev/null | grep 'Free Software Foundation' > /dev/null \
       && TAR_IS_GNU=yes
$TAR --license 2>/dev/null | grep 'Free Software Foundation' > /dev/null \
       && TAR_IS_GNU=yes
$TAR --version 2>/dev/null | head -1 | grep '^tar ' > /dev/null \
       || TAR_IS_GNU=no
AC_MSG_RESULT([$TAR_IS_GNU])
if test $TAR_IS_GNU = no; then
  AC_MSG_ERROR([pkgbuild requires GNU tar for correct operation])
fi
AC_SUBST(PATCH)

AC_SUBST(TAR)

# Anyone knows a better way to do this with autoconf? let me know...
WARNING_MESSAGE_L1="#########################################################"
WARNING_MESSAGE_L2="#                                                       #"
WARNING_MESSAGE_L3="#  This file was automatically generated by configure.  #"
WARNING_MESSAGE_L4="#  DO NOT MODIFY DIRECTLY, modify the .in file and      #"
WARNING_MESSAGE_L5="#  run configure to rebuild this file.                  #"
WARNING_MESSAGE_L6="#                                                       #"
WARNING_MESSAGE_L7="#########################################################"
AC_SUBST(WARNING_MESSAGE_L1)
AC_SUBST(WARNING_MESSAGE_L2)
AC_SUBST(WARNING_MESSAGE_L3)
AC_SUBST(WARNING_MESSAGE_L4)
AC_SUBST(WARNING_MESSAGE_L5)
AC_SUBST(WARNING_MESSAGE_L6)
AC_SUBST(WARNING_MESSAGE_L7)

test "x${prefix}" = xNONE && prefix=$ac_default_prefix
PKGBUILD_PREFIX="$prefix"
AC_SUBST(PKGBUILD_PREFIX)

ARCH=`uname -p`
AC_SUBST(ARCH)

PKGBUILD_LIBDIR="${prefix}/lib/pkgbuild-${PKGBUILD_VERSION}"
AC_SUBST(PKGBUILD_LIBDIR)

AC_ARG_WITH(topdir, [  --with-topdir=dir       Obsolete.], 
		    [AC_MSG_ERROR([
The --with-topdir option is now obsolete.
Each user has their own topdirs.  The default location is \$HOME/packages,
use .pkgtoolrc to change it.])], : )

#tests/Makefile
#tests/SOURCES/Makefile
#tests/SPECS/Makefile
#tests/do-test.pl
AC_OUTPUT([
Makefile
m4/Makefile
pkgbuild
pkgbuild.pl
rpm_spec.pm
pkgdb.pm
pkgbuild.spec
pkgtool
spectool
macros
])
